[PR-4] Homepage Honeymoon Specials complete.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
   <body>
-    
+       <header class="container">
+              <div class="container-wrapper">
+                <div class="image">
+                  <img src="images/Illustration.png">
+                  <div class="description-text">
+                          <h5>HONEYMOON SPECİALS</h5>
+                          <h1>Our Romantic Tropical <br> Destinations</h1>
+                          <p>Et labore harum non nobis ipsum eum molestias mollitia et corporis praesentium a laudantium internos. Non quis eius quo eligendi corrupti et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus illum aut optio quibusdam!</p>
+                          <button> <h6>View Packages </h6></button>
+                  </div>
+                <div class="plus-effects">
+                  <h3 class="hcolor">+</h3>
+                  <h3>+</h3>
+                  <h3>+</h3>
+                  <h3>+</h3>
+                  <h3>+</h3>
+                </div>
+                <div class="plus-effects-two">
+                  <h3>+</h3>
+                  <h3>+</h3>
+                  <h3 class="color4">+</h3>
+                  <h3>+</h3>
+                </div>
+                <div class="plus-effects-three">
+                  <h3>+</h3>
+                  <h3 class="colorh3">+</h3>
+                  <h3>+</h3>
+                  <h3>+</h3>
+                </div>
+                </div>
+                </div>
+              </div>
+       </header>
   </body>
 </html>
