[PR-4]Homepage-Honeymoon-Specials-finished

--- a/index.html
+++ b/index.html
@@ -8,34 +8,45 @@
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
   <body>
-       <header class="honeymoon-container">
-              <div class="honeymoon-wrapper">
-                <div class="honeymoon-image">
-                  <img src="images/Illustration.png">
-                  <div class="honeymoon-description-text">
-                          <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
-                          <h1 class="romantic-tropical-honey">Our Romantic Tropical <br> Destinations</h1>
-                          <p class="honeymoon-desc-etlabore">Et labore harum non nobis ipsum eum molestias mollitia et corporis praesentium a laudantium internos. Non quis eius quo eligendi corrupti et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus illum aut optio quibusdam!</p>
-                          <button class="wiew-packages-btn" > <h6 class="wiew-packages-text">View Packages </h6></button>
-                  </div>
-                <div class="plus-effects-honeymoon">
-                   <div class="plus-honey-effects-color">+</div>
-                   <div class="plus-honey-effects">+</div>
-                   <div class="plus-honey-effects">+</div>
-                   <div class="plus-honey-effects">+</div>
-                   <div class="plus-honey-effects">+</div>
-                </div>
-                <div class="plus-effects-honeymoon-two">
-                  <div class="plus-honey-effects-color">+</div>
-                  <div class="plus-honey-effects">+</div>
-                  <div class="plus-honey-effects">+</div>
-                  <div class="plus-honey-effects">+</div>
-                  <div class="plus-honey-effects">+</div>
-                  <div class="plus-honey-effects">+</div>
-                  <div class="plus-honey-effects">+</div>
-                  <div class="plus-honey-effects">+</div>
-                </div>
-              </div>
-       </header>
+    <div class="honeymoon-wrapper">
+      <div class="honeymoon-image">
+        <img src="images/Illustration.png" />
+
+        <div class="honeymoon-plus-effects">
+          <div class="honeymoon-plus-effect-color">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+        </div>
+        <div class="honeymoon-plus-effect-two">
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect-color">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect-color">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effect">+</div>
+        </div>
+      </div>
+      <div class="honeymoon-description-text">
+        <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
+        <h1 class="romantic-tropical-honey">
+          Our Romantic Tropical <br />
+          Destinations
+        </h1>
+        <p class="honeymoon-desc-etlabore">
+          Et labore harum non nobis ipsum eum molestias mollitia <br />
+          et corporis praesentium a laudantium internos. Non quis eius quo
+          eligendi corrupti et fugiat nulla <br />
+          Zqui soluta recusandae in maxime quasi aut ducimus illum aut optio
+          quibusdam!
+        
+        </p>
+        <br>
+        <button class="wiew-packages-btn"><h6>View Packages</h6></button>
+      </div>
+    </div>
   </body>
 </html>
