[PR-4]homepage-honeymoon-specials-update-finished-end

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="honeymoon-wrapper">
       <div class="honeymoon-image">
-        <img src="images/Illustration.png" />
+        <img class="honeymoon-img" src="images/Illustration.png" />
 
         <div class="honeymoon-plus-effects">
           <div class="honeymoon-plus-effect-color">+</div>
@@ -33,7 +33,7 @@
       <div class="honeymoon-description-text">
         <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
         <h1 class="romantic-tropical-honey">
-          Our Romantic Tropical <br />
+          Our Romantic Tropical <br>
           Destinations
         </h1>
         <p class="honeymoon-desc-etlabore">
