--- a/index.html
+++ b/index.html
@@ -8,44 +8,46 @@
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
   <body>
-    <div class="honeymoon-wrapper">
-      <div class="honeymoon-image">
-        <img class="honeymoon-img" src="images/Illustration.png" />
+    <div class="honeymoon-project-container">
+      <div class="honeymoon-wrapper">
+        <div class="honeymoon-image">
+          <img class="honeymoon-img" src="images/Illustration.png" />
 
-        <div class="honeymoon-plus-effects">
-          <div class="honeymoon-plus-effect-color">+</div>
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect">+</div>
+          <div class="honeymoon-plus-effects">
+            <div class="honeymoon-plus-effect-color">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+          </div>
+          <div class="honeymoon-plus-effect-two">
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect-color">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect-color">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+            <div class="honeymoon-plus-effect">+</div>
+          </div>
         </div>
-        <div class="honeymoon-plus-effect-two">
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect-color">+</div>
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect-color">+</div>
-          <div class="honeymoon-plus-effect">+</div>
-          <div class="honeymoon-plus-effect">+</div>
+        <div class="honeymoon-description-text">
+          <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
+          <h1 class="romantic-tropical-honey">
+            Our Romantic Tropical <br />
+            Destinations
+          </h1>
+          <p class="honeymoon-desc-etlabore">
+            Et labore harum non nobis ipsum eum molestias mollitia et
+            corporis<br />
+            praesentium a laudantium internos. Non quis eius quo eligendi
+            corrupti et fugiat nulla Zqui soluta recusandae in maxime quasi aut
+            ducimus<br />
+            illum aut optio quibusdam!
+          </p>
+          <br />
+          <button class="wiew-packages-btn"><h6>View Packages</h6></button>
         </div>
-      </div>
-      <div class="honeymoon-description-text">
-        <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
-        <h1 class="romantic-tropical-honey">
-          Our Romantic Tropical <br>
-          Destinations
-        </h1>
-        <p class="honeymoon-desc-etlabore">
-          Et labore harum non nobis ipsum eum molestias mollitia <br />
-          et corporis praesentium a laudantium internos. Non quis eius quo
-          eligendi corrupti et fugiat nulla <br />
-          Zqui soluta recusandae in maxime quasi aut ducimus illum aut optio
-          quibusdam!
-        
-        </p>
-        <br>
-        <button class="wiew-packages-btn"><h6>View Packages</h6></button>
       </div>
     </div>
   </body>
