Berkay/PR-4-homepage-honeymoon-specials-finish-three-end-control

--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
         <div class="honeymoon-description-text">
           <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
           <h1 class="romantic-tropical-honey">
-            Our Romantic Tropical <br />
+            Our Romantic Tropical
             Destinations
           </h1>
           <p class="honeymoon-desc-etlabore">
             Et labore harum non nobis ipsum eum molestias mollitia et
             corporis<br />
             praesentium a laudantium internos. Non quis eius quo eligendi
-            corrupti et fugiat nulla Zqui soluta recusandae in maxime quasi aut
-            ducimus<br />
-            illum aut optio quibusdam!
+            corrupti<br> et fugiat nulla Zqui soluta recusandae in maxime quasi aut
+            ducimus illum <br> aut optio quibusdam!
           </p>
           <button class="wiew-packages-btn"><h6>View Packages</h6></button>
         </div>
