--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
         <div class="honeymoon-description-text">
           <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
           <h1 class="romantic-tropical-honey">
-            Our Romantic Tropical
+            Our Romantic Tropical <br>
             Destinations
           </h1>
           <p class="honeymoon-desc-etlabore">
             Et labore harum non nobis ipsum eum molestias mollitia et
-            corporis<br />
-            praesentium a laudantium internos. Non quis eius quo eligendi
-            corrupti<br> et fugiat nulla Zqui soluta recusandae in maxime quasi aut
-            ducimus illum <br> aut optio quibusdam!
+            corporis<br> praesentium a laudantium internos. Non quis eius quo eligendi
+            corrupti et fugiat nulla Zqui soluta recusandae in maxime quasi aut
+            ducimus illum <br>aut optio quibusdam!
           </p>
           <button class="wiew-packages-btn"><h6>View Packages</h6></button>
         </div>
