Berkay/PR-4-Homepage-Honeymoon-Special-finished-project-end

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p class="honeymoon-desc-etlabore">
             Et labore harum non nobis ipsum eum molestias mollitia et
             corporis<br> praesentium a laudantium internos. Non quis eius quo eligendi
-            corrupti et fugiat nulla Zqui soluta recusandae in maxime quasi aut
+            corrupti <br> et fugiat nulla Zqui soluta recusandae in maxime quasi aut
             ducimus illum <br>aut optio quibusdam!
           </p>
           <button class="wiew-packages-btn"><h6>View Packages</h6></button>
