Berkay/PR-12-Homepage-Promotions-Explore-Packages-project-finished

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
   <body>
-    
+    <div class="promotion-explore-container">
+      <div class="explore-nature">
+        <div class="black-color-for-opacity">
+          <img class="nature-line-effect" src="images/explore-section-line-img01.png"/>
+          <img class="explore-nature-img" src="images/homepage-explore1.png" />
+          <div class="explore-description-text">
+            <h5 class="nature-promotion-text">Promotion</h5>
+            <h1 class="explore-nature-text">Explore Nature</h1>
+            <button class="wiew-packages-btn">View Packages</button>
+          </div>
+        </div>
+      </div>
+      <div class="explore-cities">
+        <div class="explore-cities">
+          <div class="black-color-for-opacity-cities">
+            <img class="cities-line-effect" src="images/explore-section-line-img02.png"/>
+            <img class="explore-cities-img" src="images/homepage-explore2.png"/>
+            <div class="explore-description-text-cities">
+              <h5 class="cities-promotion-text">Promotion</h5>
+              <h1 class="explore-cities-text">Explore Cities</h1>
+              <button class="wiew-packages-btn-cities">View Packages</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
