berkay/PR-11-homepage-footer-control

--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
   <body>
-    
+    <div class="homepage-footer-container">
+      <div class="travel-footer-logo-description">
+        <h1 class="travel-logo-text">Travel</h1>
+        <img class="footer-logo" src="images/logo.png" />
+        <p class="logo-mini-text">
+          Travel helps companies<br />
+          manage payments easily.
+        </p>
+        <div class="social-media-icons-footer">
+          <img src="images/025-messenger.svg" />
+          <img src="images/052-linkedin.svg" />
+          <img src="images/096-twitter.svg" />
+          <img src="images/097-twoo.svg" />
+        </div>
+        <div class="company-and-destinitions-links">
+          <ul class="company-items">
+            <h2 class="company-text">Company</h2>
+            <li><a href="#">About As</a></li>
+            <br />
+            <li><a href="#">Career</a></li>
+            <br />
+            <li><a href="#">Blog</a></li>
+            <br />
+            <li><a href="#">Piricing</a></li>
+            <br />
+          </ul>
+          <ul>
+            <h2 class="company-text">Destinations</h2>
+            <li><a href="#">Maldives</a></li>
+            <br />
+            <li><a href="#">Los Angelas</a></li>
+            <br />
+            <li><a href="#">Las Vegas</a></li>
+            <br />
+            <li><a href="#">Torronto</a></li>
+            <br />
+          </ul>
+        </div>
+        <div class="join-our-newsietter-footer">
+          <h1 class="join-our-text">Join Our Newsletter</h1>
+          <input class="your-email-adress" style="text" placeholder="Your email adress"/>
+          <button class="subsicribe-btn">Subsicribe</button>
+          <p class="join-our-paragraph">
+            * Will send you weekly updates for your better<br />
+            tour packages.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
