[PR-11]-homepage-footer-finished

--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
           manage payments easily.
         </p>
         <div class="social-media-icons-footer">
-          <img src="images/025-messenger.svg" />
-          <img src="images/052-linkedin.svg" />
-          <img src="images/096-twitter.svg" />
-          <img src="images/097-twoo.svg" />
+          <img class="footer-icons-img" src="images/025-messenger.png" />
+          <img class="footer-icons-img" src="images/052-linkedin.png" />
+          <img class="footer-icons-img" src="images/096-twitter.png" />
+          <img class="footer-icons-img" src="images/097-twoo.png" />
         </div>
         <div class="company-and-destinitions-links">
           <ul class="company-items">
             <h2 class="company-text">Company</h2>
-            <li><a href="#">About As</a></li>
+            <li><a class="links-items-footer" href="#">About As</a></li>
             <br />
-            <li><a href="#">Career</a></li>
+            <li><a class="links-items-footer"  href="#">Career</a></li>
             <br />
-            <li><a href="#">Blog</a></li>
+            <li><a class="links-items-footer"  href="#">Blog</a></li>
             <br />
-            <li><a href="#">Piricing</a></li>
+            <li><a class="links-items-footer"  href="#">Piricing</a></li>
             <br />
           </ul>
           <ul>
             <h2 class="company-text">Destinations</h2>
-            <li><a href="#">Maldives</a></li>
+            <li><a class="links-items-footer"  href="#">Maldives</a></li>
             <br />
-            <li><a href="#">Los Angelas</a></li>
+            <li><a class="links-items-footer"  href="#">Los Angelas</a></li>
             <br />
-            <li><a href="#">Las Vegas</a></li>
+            <li><a class="links-items-footer"  href="#">Las Vegas</a></li>
             <br />
-            <li><a href="#">Torronto</a></li>
+            <li><a class="links-items-footer"  href="#">Torronto</a></li>
             <br />
           </ul>
         </div>
