[PR-11]-homepage-footer-finished-chanced

--- a/index.html
+++ b/index.html
@@ -57,5 +57,8 @@
         </div>
       </div>
     </div>
+    <div class="footer-copyright-text">
+      <h6>Copyright @ Xpro 2022. All Rights Reserved.</h6>
+    </div>
   </body>
 </html>
