--- a/index.html
+++ b/index.html
@@ -21,48 +21,48 @@
           <h5 class="Homepage-best-services-1">CATEGORY</h5>
           <h1 class="Homepage-best-services-2">We Offer Best Services</h1>
         </div>
-        <div class="Homepage-best-services-img-text">
+        <div class="Homepage-best-services-img-human">
           <div class="Homepage-best img-text1">
-            <div class="Homepage-best-img1">
+            <div class="Homepage-best-human-img">
               <img src="images/homepage-services-human.png">
-              <span class="Hompage-1"></span>
+              <span class="Hompage-box-1"></span>
             </div>
-            <div class="Homepage-best-services-text1">
-              <h4 class="Homepage-best-services">Guided Tours</h4>
-              <p class="Homepage-best-services-3">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
+            <div class="Homepage-best-services-human-text1">
+              <h4 class="Homepage-best-services-title-articles">Guided Tours</h4>
+              <p class="Homepage-best-services-paragraph-texts">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
             </div>
           </div>
-          <div class="Homepage-best-services-img-text2">
+          <div class="Homepage-best-services-img-plane">
             <div class="Hompage-box-shadow"></div>
-            <div class="Homepage-best-services-img2">
+            <div class="Homepage-best-services-plane-img">
               <img src="images/homepage-services-plane.png">
-              <span class="Homepage-2"></span>
+              <span class="Hompage-box-2"></span>
              <img class="Homapage-6" src="images/img.jpg.svg">
               
             </div>
-            <div class="Homepage-best-services-text2">
-              <h4 class="Homepage-best-services">Best Flight Options</h4>
-              <p class="Homepage-best-services-3">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
+            <div class="Homepage-best-services-plane-text">
+              <h4 class="Homepage-best-services-title-articles">Best Flight Options</h4>
+              <p class="Homepage-best-services-paragraph-texts">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
             </div>
           </div>
-          <div class="Homepage-best-services-img-text3">
-            <div class="Homepage-best-services-img3">
+          <div class="Homepage-best-services-img-hands">
+            <div class="Homepage-best-services-hands-img">
               <img src="images/homepage-services-hands.png">
-              <span class="Homapage-3"></span>
+              <span class="Hompage-box-3"></span>
             </div>
-            <div class="Homepage-best-services-text3">
-              <h4 class="Homepage-best-services">Religiours Tours</h4>
-              <p class="Homepage-best-services-3">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
+            <div class="Homepage-best-services-hands-text">
+              <h4 class="Homepage-best-services-title-articles">Religiours Tours</h4>
+              <p class="Homepage-best-services-paragraph-texts">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
             </div>
           </div>
-          <div class="Homepage-best-services-img-text4">
-            <div class="Homepage-best-services-img4">
+          <div class="Homepage-best-services-img-medical">
+            <div class="Homepage-best-services-medical-img">
               <img src="images/homepage-services-medical.png">
-              <span class="Hompage-4"></span>
+              <span class="Hompage-box-4"></span>
             </div>
-            <div class="Homepage-best-services-text4">
-              <h4 class="Homepage-best-services">Medical İnsurance</h4>
-              <p class="Homepage-best-services-3">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
+            <div class="Homepage-best-services-medical-text">
+              <h4 class="Homepage-best-services-title-articles">Medical İnsurance</h4>
+              <p class="Homepage-best-services-paragraph-texts">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
             </div>
           </div>
         </div>
