--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
       <div class="best-services">
         <div class="Homepage-best-container">
           <h5 class="Homepage-best-services-1">CATEGORY</h5>
-          <h1 class="Homepage-best-services-2">We Offer Best Services</h1>
+          <h2 class="Homepage-best-services-2">We Offer Best Services</h2>
         </div>
-        <div class="Homepage-best-services-img-human">
-          <div class="Homepage-best img-text1">
+        <div class="Homepage-best-services-img-text">
+          <div class="Homepage-best-services-human">
             <div class="Homepage-best-human-img">
               <img src="images/homepage-services-human.png">
               <span class="Hompage-box-1"></span>
             </div>
-            <div class="Homepage-best-services-human-text1">
+            <div class="Homepage-best-services-human-text">
               <h4 class="Homepage-best-services-title-articles">Guided Tours</h4>
               <p class="Homepage-best-services-paragraph-texts">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
             </div>
           </div>
-          <div class="Homepage-best-services-img-plane">
-            <div class="Hompage-box-shadow"></div>
+          <div class="Homepage-best-services-plane">
+            <div class="orange-box"></div>
             <div class="Homepage-best-services-plane-img">
-              <img src="images/homepage-services-plane.png">
+              <img class="plane" src="images/homepage-services-plane.png">
               <span class="Hompage-box-2"></span>
-             <img class="Homapage-6" src="images/img.jpg.svg">
+            
               
             </div>
             <div class="Homepage-best-services-plane-text">
@@ -45,7 +45,7 @@
               <p class="Homepage-best-services-paragraph-texts">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
             </div>
           </div>
-          <div class="Homepage-best-services-img-hands">
+          <div class="Homepage-best-services-hands">
             <div class="Homepage-best-services-hands-img">
               <img src="images/homepage-services-hands.png">
               <span class="Hompage-box-3"></span>
@@ -55,7 +55,7 @@
               <p class="Homepage-best-services-paragraph-texts">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placead.</p>
             </div>
           </div>
-          <div class="Homepage-best-services-img-medical">
+          <div class="Homepage-best-services-medical">
             <div class="Homepage-best-services-medical-img">
               <img src="images/homepage-services-medical.png">
               <span class="Hompage-box-4"></span>
