bugra/PR-6-Homepage-Liberty-Banner add a picture

--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
         </div>
       </div>
     </div>
+    <div class="image-container">
+      <img src="liberty-statue-img.png" alt="Homepage-Liberty-Banner">
+      
+    </div>
   </body>
 </html>
