berkay/[PR-9]-Homepage-Trending-Tour-Packages-merged-finished

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="trending-your-packages-container">
-      <div class="first-texts">
+      <div class="trending-your-packages-project-start">
         <h5 class="trendy-text">Trendy</h5>
         <h1 class="out-trending-packages-text">
           Our Trending Tour <br />Packages
